--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		<span class="branch-email"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;{{branch_email}}</span>
 		<span class="branch-address"><i class="fa fa-map-signs" aria-hidden="true"></i>&nbsp;{{branch_address}}</span>
 
-		<a href="" class="btn-branch-details"></a>		
+		<a href="" class="btn-branch-details">Branch details</a>		
 	</script>
 
 	<!-- Scrips -->
-	<script src="//maps.googleapis.com/maps/api/js?v=3.30&libraries=places&key=AIzaSyCrESE9dY_QkJ1v43gNEtn4-2SK8IP4FVw"></script>
+	<script src="//maps.googleapis.com/maps/api/js?v=3.30&libraries=places&key=google-maps-api-key"></script>
 	<script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
